hydroflow/tests/compile-fail/surface_unknown_operators.rs
use hydroflow::hydroflow_syntax;

fn main() {
    let mut df = hydroflow_syntax! {
        hydro_lab() -> for_each(std::mem::drop);
    };
    df.run_available();
}
